--- a/Kalitkad.mw
+++ b/Kalitkad.mw
@@ -3,6 +3,11 @@
 
 Karjalan naižed pagižiba: ''Kalittoa kyzyy kaheksoa'' «kalitk küzub kahesad». Toižin sanoin, kahesa komponentad oma tarbhaižed paštamha nenid pirgoid: rugižjauh (voib nižujauhon ližadusenke), vezi, hapamaid, sol, maid, argvoi, kandatez i südäin. Südäimeks ottas nenid produktoid: märgištunu hapamaidos ozrsurim, ozrpudr, kartohk, keittud ris vai šon, taukun.
 
+== Kalitkha sidodud vepsän muštatiž ==
+<blockquote>
+* ''Voi kalitkad ei pahenda.''
+</blockquote>
+
 == Irdkosketused ==
 * [http://vepsian.krc.karelia.ru/text/?text_id=49 Kut kalitkad pašttas // Vepsän kelen korpus. — #49.]
 {{Commons|Category:Karjalanpiirakka}}
