--- a/Ristit.mw
+++ b/Ristit.mw
@@ -23,6 +23,7 @@ Ristitun erigoičijad päpirdad oma püštoiged kävund, šingotadud päaivod, m
 == Ristithu sidodud vepsän muštatišed ==
 <blockquote>
 * ''Hebod taganpäi, koirad edespäi, ristitud kaikiš polišpäi tarbiž varaita.''
+* ''Kana eile lind, ak eile ristit.''
 * ''Pen' da tark, sur' da šläbäk.''
 </blockquote>
 
