--- a/Pajo.mw
+++ b/Pajo.mw
@@ -8,6 +8,11 @@ Erinedas pajod žanroiden, mülükundan, edestusen formiden da toižiden tundusi
 
 Pajo voib edestadas kut ühtel [[pajatai|pajatajal]], muga [[hor]]al-ki. Pajatadas pajoid kut [[soitod|instrumentaliženke]] mödustandanke, ninga sita ([[a cappella]]).
 
+== Pajoho sidodud vepsän muštatiž ==
+<blockquote>
+* ''Pajata hot' karzn'as ka kuldas, voika hot' pertin päl ka ei kulgoi.''
+</blockquote>
+
 == Homaičendad ==
 <references/>
 
