--- a/Kataisk.mw
+++ b/Kataisk.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Kataiskan lidnanznam
  | Flag text =
  | Valdkund = Venäma
- | Eläjiden lugu = 12,585
- | Voz' = 2017
+ | Eläjiden lugu = 12,341
+ | Voz' = 2021
  | Pind = 24
- | Fail = Г. Катайск - panoramio (1).jpg
- | Pämez' = Valerii Černih<br />(tal'vku 2013—)
+ | Fail = Г. Катайск - panoramio (16).jpg
+ | Pämez' = Sabiržan Musalämov<br />(uhoku 2019—)
  | Telefonkod = +7-35251-xx-xxx
  | Avtokod = 45
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -27,9 +27,22 @@ Lidn sijadase Iset'-jogen hural randal ([[Tobol]]an hura ližajogi) Kataik-jogen
 Kataisk om lidnankundan üks'jäine eländpunkt. Lidnankundan pind — 145,5 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 14 003 ristitud, rajonan koume videndest. Kaikiš suremb lidnan ristitišt oli 15..16 tuh. eläjid vll 1979−2006 (16 789 rist. vl 1989). [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman «Kaikiden gorähižiden ihastuz»-jumalaižen puine pühäpert' om avaitud vl 2010.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 14 003 ristitud, rajonan koume videndest. Kaikiš suremb lidnan ristitišt oli 15..16 tuh. eläjid vll 1979−2006 (16 789 rist. vl 1989).
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman «Kaikiden gorähižiden ihastuz»-jumalaižen puine pühäpert' om avaitud vl 2010.
 
 Kataiskan professionaliž-pedagogine tehnikum<ref>[http://кппт.рф/ Kataiskan professionaliž-pedagogižen tehnikuman sait (''кппт.рф'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+Edeline lidnan pämez' om Valerii Černih (tal'vku 2013 — uhoku 2019).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">č
+Г. Катайск - panoramio (10).jpg|Kataiskan rajonan kodirandantedištandmuzei (2015)
+Г. Катайск - panoramio (3).jpg|Jumalanmaman «Kaikiden gorähižiden ihastuz»-jumalaižen pühäpert', vn 2012 nägu
+Здание проходной АО "Катайский насосный завод".jpg|Kataiskan pomptegimen pätulend vl 2021
+Г. Катайск - panoramio.jpg|«Lučezar»-kul'turkeskuz (2012)
+Г. Катайск - panoramio (19).jpg|Ofispert' (2012)
+</gallery>
 
 == Homaičendad ==
 <references/>
