*Empty MediaWiki Message*

--- a/Kataisk.mw
+++ b/Kataisk.mw
@@ -36,7 +36,7 @@ Kataiskan professionaliž-pedagogine tehnikum<ref>[http://кппт.рф/ Kataisk
 Edeline lidnan pämez' om Valerii Černih (tal'vku 2013 — uhoku 2019).
 
 == Galerei ==
-<gallery mode="packed" heights="125px">č
+<gallery mode="packed" heights="125px">
 Г. Катайск - panoramio (10).jpg|Kataiskan rajonan kodirandantedištandmuzei (2015)
 Г. Катайск - panoramio (3).jpg|Jumalanmaman «Kaikiden gorähižiden ihastuz»-jumalaižen pühäpert', vn 2012 nägu
 Здание проходной АО "Катайский насосный завод".jpg|Kataiskan pomptegimen pätulend vl 2021
