--- a/Unbibii.mw
+++ b/Unbibii.mw
@@ -1,6 +1,6 @@
 '''Unbibii''' (vai '''Eka-[[torii]]'''; {{lang-la|Unbibium}}), znamoitud aigaks kut '''Ubb''', linneb 122. himižeks elementaks [[himižiden elementoiden periodine tablut|Mendelejevan periodižes tabludes]].
 
-Erasiden andmusiden mödhe, unbibijan [[izotop]]ad oma olmas londuses ([[torii|torijan]] kezandmaiš, dai sen südäiolend niiš om tühjine), no himikoiden enambusel om heilündoid neciš faktas. Jal'ges ičeze konkretišt avaidust se mülüškandeb udhe, [[periodižen sisteman kahesanz' period|himižiden elementoiden periodižen tabluden 8. periodha]]. Tehtihe necen elementan sinteziruindan naprindoid, no kaikuine niišpäi oli satusetoi.
+Erasiden andmusiden mödhe, unbibijan [[izotop]]ad oma olmas londuses ([[torii|torijan]] kezandmaiš, dai sen südäiolend niiš om tühjine), no himikoiden enambusel om heilündoid neciš faktas. Jal'ges ičeze konkretišt avaidust se mülüškandeb udhe, [[periodižen sisteman kahesanz' period|himižiden elementoiden periodižen tabluden 8. periodha]]. Tehtihe necen elementan sinteziruindan naprindoid vspäi 1972, no kaikuine niišpäi oli satusetoi. Nügüdläižiden ladimiden mujandmär om severt-se kümnen märpordhiden madalamb, mi tarbiž löudamha unbibijan atomiden hot' pen't verdad.
 
 Prognoziruidud atommass — läz 324 [[massan atomühtnik|m. AÜ]]. [[Elektronine konfiguracii]] — ''5g<sup>2</sup>8s<sup>2</sup>''. Sille tarbiž olda metallan (''[[superaktinoidad|superaktinoidaks]]''), no nügüd' voib sanuda sen ičendoiden polhe vaiše ezimeletaden.
 
