--- a/Videnz'_Kilometr_(Leningradan_agj).mw
+++ b/Videnz'_Kilometr_(Leningradan_agj).mw
@@ -12,11 +12,15 @@
 }}
 '''Videnz' Kilometr''' ({{lang-ru|Пятый Километр}}) om žilo stancijanno [[Leningradan agj]]an [[Vsevoložskan rajon]]as, sen [[Zanevkan lidnkund]]as. 
 
+== Istorii ==
 Žilo mainitase vspäi 1973, om saudud ''5. km''-raudteplatformanno. Om ühtenzoittud [[Janino-1]]-žilonke vižkilometrižel avtotel.
 
+[[Sur' Tatanmaine soda|Suren sodan]] nevondkundaližiden sodamehiden velleskaum-muštnik sijadase pohjoižhe žilospäi, sidä kesken Baltijan laivišton pölištunuded merimehed oma mahapandud siš.
+
+== Geografijan andmused ==
 Žilo sijadase rajonan suvipäivlaskmas, ani suvhe «[[Piter]] — [[Koltuši]]»-avtotespäi.
 
-Vn 2010 Venäman rahvahanlugemižen mödhe žilon eläjiden lugu oli 4 ristitud. Kaikiš suremb ristitišt oli 12 eläjad vl 2002 (koume nelländest — [[venälaižed]]).
+Vn 2010 Venäman rahvahanlugemižen mödhe žilon kaikenaigaižiden eläjiden lugu oli 4 ristitud. Kaikiš suremb ristitišt oli 12 eläjad vl 2002 (koume nelländest — [[venälaižed]]).
 
 == Homaičendad ==
 <references />
