*Empty MediaWiki Message*

--- a/Barbadosan_valdkundznam.mw
+++ b/Barbadosan_valdkundznam.mw
@@ -4,7 +4,7 @@
 == Ümbrikirjutand ==
 Bardakaz fikus om kuvatud rindhankatusel, «bardakaz» ispanijan kelel linneb ''barbudos'', mi andoi nimitust sarele da valdkundale. Kaks' sijališt [[čomakulu cezal'pinii]]-änikod ({{lang-la|Caesalpinia pulcherrima}}) oma laudan üläčogiš. Barbadosan londusen [[sur' korifen]] i [[bur pelikan]] pid'oiteldas rindhankatust polišpäi. Ricarin šlöm sijadase laudan päl äjiden enččiden britanižiden territorijoiden vuitte.
 
-Venc i barbad oma pakuižed i rusttad mujul. Ned mujud sättudas rindhankatusen i sen fikusan mujuile. Käzi rindhankatusespäi kandab [[saharrogo]]n kaht seikast, sen kazvatand om valdkundan ižandusen aluz voz'sadoiš.
+Venc i barbad oma pakuižed i rusttad mujul. Ned mujud sättudas rindhankatusen i sen orhidejiden mujuile. Käzi rindhankatusen tagaspäi kandab [[saharrogo]]n kaht seikast, sen kazvatand om valdkundan ižandusen aluz voz'sadoiš.
 
 ''Pride and Industry''-deviz kändase anglijan kelespäi kuti «ülenpäižuz i radonnavedind».
 
