--- a/Tekil.mw
+++ b/Tekil.mw
@@ -4,6 +4,8 @@
 
 Sadas jomad [[azur'ne agav|azur'žen agavan]] ({{lang-la|Agave tequilana}}) fermentiruidud südäiveden distilläcijal vaiše [[Meksik]]an neciš vides štatas: Halisko, Guanahuato, Mičoakan, Najarit i Tamaulipas. Ezmäine tegim radaškanzi Tekil-lidnas vl 1795, nimitihe jomad sen mödhe. Jom sai rahvahidenkeskešt populärižust vn 1968 Olimpižiden vändoiden jäl'ghe Mehiko-lidnas.
 
+Joman tehmine zavodihe 16. voz'sadal. Sen vägevuz om 38..55 procentad röunoiš. Tetabad torguindznamad oma Olmeca, Cazadores, Camino Real, Don Julio, Sauza.
+
 {{Commons|Category:Tequila}}
 {{Alkogoližed jomad}}
 
