--- a/Tekil.mw
+++ b/Tekil.mw
@@ -2,9 +2,14 @@
 [[Fail:Tequilas.JPG|thumb|right|250px|Tekilan erazvuiččed brendad]]
 '''Tekil''' ({{lang-es|Tequila}}) om väghine [[alkogoližed jomad|alkogoline jom]] ([[meskal']]).
 
-Sadas jomad [[azur'ne agav|azur'žen agavan]] ({{lang-la|Agave tequilana}}) fermentiruidud südäiveden distilläcijal vaiše [[Meksik]]an neciš vides štatas: Halisko, Guanahuato, Mičoakan, Najarit i Tamaulipas. Ezmäine tegim radaškanzi Tekil-lidnas vl 1795, nimitihe jomad sen mödhe. Jom sai rahvahidenkeskešt populärižust vn 1968 Olimpižiden vändoiden jäl'ghe Mehiko-lidnas.
+Sadas jomad [[azur'ne agav|azur'žen agavan]] ({{lang-la|Agave tequilana}}) fermentiruidud südäiveden distilläcijal vaiše [[Meksik]]an neciš vides štatas: Halisko, Guanahuato, Mičoakan, Najarit i Tamaulipas. Ezmäine tegim radaškanzi Tekil-lidnas vl 1795, nimitihe jomad sen mödhe. Jom sai rahvahidenkeskešt populärižust vn 1968 Olimpižiden vändoiden jäl'ghe Mehiko-lidnas. Tekilan tehmižen eksklüzivine oiktuz om Meksikan edheotajil vspäi 1974.
 
-Joman tehmine zavodihe 16. voz'sadal. Sen vägevuz om 38..55 procentad röunoiš. Tetabad torguindznamad oma Olmeca, Cazadores, Camino Real, Don Julio, Sauza.
+Joman tehmine zavodihe 16. voz'sadal. Sen vahvuz om 38..55 procentad röunoiš. Fermentacijan jäl'ghe joman vahvuz om vaiše läz 18 %, ka sadas tarbhašt vahvust kaksitadud distilläcijal. Tetabad torguindznamad oma Olmeca, Cazadores, Camino Real, Don Julio, Sauza.
+
+Tekilan rahvahaline praznik oigendase Tekil-lidnas (Halisko-štat) joga voden kül'mkun 29. päiväspäi tal'vkun 13. päivhäsai, avaidase surel jarmankal. Se praznik vedatab turistoiden äjüt lähižiš agjoišpäi i verhiš maišpäi. Vl 2018 Meksikan senat vahvišti, miše Tekilan rahvahaline päiv om keväz'kun koumanz' sobat.<ref>[http://theculturetrip.com/north-america/mexico/articles/mexicos-senate-just-declared-a-new-national-tequila-day/ ''Stephen Woodman''. Mexico's Senate Just Declared a New National Tequila Day (''Meksikan senat tedoti udes Tekilan rahvahaližes päiväs''). — ''Theculturetrip.com''. {{ref-en}} </ref>
+
+== Homaičendad ==
+<references />
 
 {{Commons|Category:Tequila}}
 {{Alkogoližed jomad}}
