--- a/Tekil.mw
+++ b/Tekil.mw
@@ -6,7 +6,7 @@ Sadas jomad [[azur'ne agav|azur'žen agavan]] ({{lang-la|Agave tequilana}}) ferm
 
 Joman tehmine zavodihe 16. voz'sadal. Sen vahvuz om 38..55 procentad röunoiš. Fermentacijan jäl'ghe joman vahvuz om vaiše läz 18 %, ka sadas tarbhašt vahvust kaksitadud distilläcijal. Tetabad torguindznamad oma Olmeca, Cazadores, Camino Real, Don Julio, Sauza.
 
-Tekilan rahvahaline praznik oigendase Tekil-lidnas (Halisko-štat) joga voden kül'mkun 29. päiväspäi tal'vkun 13. päivhäsai, avaidase surel jarmankal. Se praznik vedatab turistoiden äjüt lähižiš agjoišpäi i verhiš maišpäi. Vl 2018 Meksikan senat vahvišti, miše Tekilan rahvahaline päiv om keväz'kun koumanz' sobat.<ref>[http://theculturetrip.com/north-america/mexico/articles/mexicos-senate-just-declared-a-new-national-tequila-day/ ''Stephen Woodman''. Mexico's Senate Just Declared a New National Tequila Day (''Meksikan senat tedoti udes Tekilan rahvahaližes päiväs''). — ''Theculturetrip.com''.] {{ref-en}} </ref>
+Tekilan rahvahaline praznik oigendase Tekil-lidnas (Halisko-štat) joga voden kül'mkun 29. päiväspäi tal'vkun 13. päivhäsai, avaidase surel jarmankal. Se praznik vedatab turistoiden äjüt lähižiš agjoišpäi i verhiš maišpäi. Vl 2018 Meksikan senat vahvišti, miše Tekilan rahvahaline päiv om keväz'kun koumanz' sobat<ref>[http://theculturetrip.com/north-america/mexico/articles/mexicos-senate-just-declared-a-new-national-tequila-day/ ''Stephen Woodman''. Mexico's Senate Just Declared a New National Tequila Day (''Meksikan senat tedoti udes Tekilan rahvahaližes päiväs''). — ''Theculturetrip.com''.] {{ref-en}} </ref>. Mugoi-žo päiv oigendase [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiš]] joga voden 24. päiväl heinkud.
 
 == Homaičendad ==
 <references />
