--- a/Menan_kel'.mw
+++ b/Menan_kel'.mw
@@ -1,11 +1,13 @@
 '''Menan kel'''' (ičeze nimituz: ''Gaelg, Gailck'', virkandad: [ɡilɡ], [ɡilk] vai [ɡeːlɡ]) om üks' [[kel'tižed keled|kel'tižiš kelišpäi]].
 
-Necel kelel pagištas Suren Britanijan [[Men (sar')|Men-sarel]]. Saren oficialine kel', toine oficialine om [[anglijan kel']].
+Necil kelel pagištas [[Sur'Britanii|Suren Britanijan]] [[Men (sar')|Men-sarel]]. Saren oficialine kel', toine oficialine om [[anglijan kel']].
 
 Pagižijoiden lugu om 1800 ristitud (2015), kävutadas kahtendeks keleks, no lapsed-ki pagištas. Menan kelen jäl'gmäine pagižii mamankeleks koli vl 1974, kel' udessündutase tedomehiden abul. Kirjkel' om [[latinan kirjamišt]]on pohjal.
 
 == Homaičendad ==
 <references/>
+
+{{Commons|Category:Manx language}}
 
 {{stub}}
 [[Kategorii:Kel'tižed keled]]
