--- a/Menan_kel'.mw
+++ b/Menan_kel'.mw
@@ -1,8 +1,12 @@
 '''Menan kel'''' (ičeze nimituz: ''Gaelg, Gailck'', virkandad: [ɡilɡ], [ɡilk] vai [ɡeːlɡ]) om üks' [[kel'tižed keled|kel'tižiš kelišpäi]].
 
-Necil kelel pagištas [[Sur'Britanii|Suren Britanijan]] [[Men (sar')|Men-sarel]]. Saren oficialine kel', toine oficialine om [[anglijan kel']].
+Necil kelel pagištas [[Sur' Britanii|Suren Britanijan]] [[Men (sar')|Men-sarel]]. Saren oficialine kel', toine oficialine om [[anglijan kel']].
 
-Pagižijoiden lugu om 1800 ristitud (2015), kävutadas kahtendeks keleks, no lapsed-ki pagištas. Menan kelen jäl'gmäine pagižii mamankeleks koli vl 1974, kel' udessündutase tedomehiden abul. Kirjkel' om [[latinan kirjamišt]]on pohjal.
+Pagižijoiden lugu om 1800 ristitud (2015), kävutadas kahtendeks keleks, no lapsed-ki pagištas. Menan kelen jäl'gmäine pagižii mamankeleks koli vl 1974, kel' udessündutase tedomehiden abul. Kirjkel' om [[latinan kirjamišt]]on pohjal, erine 17. voz'sadaspäi. Reguliruindorganizacii om ''Coonceil ny Gaelgey'' ({{lang-en|Manx Language Advisory Council}}, radab saren Sent-Džons-küläs vn 1985 tal'vkuspäi.
+
+Kaks' paginad sarel: pohjoine i suvine, ned erigoičesoiš virkandan mödhe. Sanoiden bazine järgenduz om VSO. Kaks' sugud — mužiksugu i naižsugu. Kaks' lugud: üks'lugu i äilugu. Erasil substantivoil genitiv-kändon form om kaičenus. Lähembaine heimkel' om [[šotlandijan gelan kel']].
+
+[[Menan Vikipedii|Vikipedii menan kelel]] om avaitud vl 2003.
 
 == Homaičendad ==
 <references/>
