--- a/Petuhovo_(lidn).mw
+++ b/Petuhovo_(lidn).mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Petuhovon lidnanznam
  | Flag text =
  | Valdkund = Venäma
- | Eläjiden lugu = 10,304
- | Voz' = 2017
+ | Eläjiden lugu = 9,916
+ | Voz' = 2021
  | Pind = 25
  | Fail = Petukhovo station 002. Southern-Ural railway, Russia.JPG
  | Pämez' = Aleksandr Gudkov<br />(sügüz'ku 2017—)
@@ -27,7 +27,9 @@ Lidn sijadase Išiman tazangištol, 135 m ü.m.t. keskmäižel korktusel. Matkad
 Petuhovo om lidnankundan üks'jäine eländpunkt. Lidnankundan pind — 40,76 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 11 292 ristitud, rajonan koume videndest. Kaikiš suremb lidnan ristitišt oli 15 100 eläjad vl 1996. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalan ozutandan pühäpert' om saudud vll 2009−2014.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 11 292 ristitud, rajonan koume videndest. Kaikiš suremb lidnan ristitišt oli 15 100 eläjad vl 1996.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalan nägundan pühäpert' om saudud vll 2009−2014.
 
 Petuhovon maižandusen mehanizacijan da elektrifikacijan tehnikum om professionaližen opendusen aluzkundaks.
 
