--- a/Makušino.mw
+++ b/Makušino.mw
@@ -31,13 +31,13 @@ Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 8 338 ristitud, ra
 
 [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Mihail-arhangelan jumalanpert' om pühästandud vl 2010.
 
-Kurganan bazižen medicinižen kolledžan Makušinon äiprofil'ne filial<ref>[http://www.kbmk45.ru/2016-03-21-06-55-10/2016-03-21-06-56-31/2016-05-04-07-46-12/2016-05-04-05-46-27.html Makušinon äiprofil'ne filial Kurganan bazižen medicinižen kolledžan ''kbmk45.ru''-saital.]</ref> (ende erine tehnikum) om professionaližen opendusen aluzkundaks.
+Kurganan bazižen medicinižen kolledžan Makušinon äiprofil'ne filial<ref>[http://kbmk.kurg.eduru.ru/o_filiale_mak Makušinon äiprofil'ne filial Kurganan bazižen medicinižen kolledžan ''kbmk.kurg.eduru.ru''-saital.]</ref> (ende erine tehnikum) om professionaližen opendusen aluzkundaks.
 
 == Homaičendad ==
 <references/>
 
 == Irdkosketused ==
-* [http://makushino45.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''makushino45.ru'').] {{ref-ru}}
+* [http://макушино45.рф/ Lidnan tobmuden aluzkundoiden oficialine sait (''макушино45.рф'').] {{ref-ru}}
 
 {{Kurganan agjan lidnad}}
 
