--- a/Makušino.mw
+++ b/Makušino.mw
@@ -37,7 +37,7 @@ Kurganan bazižen medicinižen kolledžan Makušinon äiprofil'ne filial<ref>[ht
 <references/>
 
 == Irdkosketused ==
-* [http://макушино45.рф/ Lidnan tobmuden aluzkundoiden oficialine sait (''макушино45.рф'').] {{ref-ru}}
+* [http://макушино45.рф/ Makušinon municipaližen ümbrikon tobmuden aluzkundoiden oficialine sait (''макушино45.рф'').] {{ref-ru}}
 
 {{Kurganan agjan lidnad}}
 
