--- a/Kurtamiš.mw
+++ b/Kurtamiš.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Kurtamišan lidnanznam
  | Flag text = Kurtamišan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 16,702
- | Voz' = 2017
+ | Eläjiden lugu = 16,401
+ | Voz' = 2021
  | Pind = 10
  | Fail = Петропавловская церковь г.Куртамыш.JPG
- | Pämez' = Sergei Voroncov<br />(sügüz'ku 2014—)
+ | Pämez' = Aleksandr Kučin<br />(sulaku 2019—)
  | Telefonkod = +7-35249-xx-xxx
  | Avtokod = 45
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -30,6 +30,8 @@ Kurtamiš om lidnankundan üks'jäine eländpunkt. Lidnankundan pind — 96,71 k
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 17 099 ristitud, rajonan viž ühesandest. Kaikiš suremb lidnan ristitišt oli 18..19 tuh. eläjid vll 1989−2003 (19 155 rist. vl 1989).
 
 Kurtamišan maižanduztehnikum<ref>[http://www.kurtamysh-sht.ru/ Kurtamišan maižanduztehnikuman sait (''kurtamysh-sht.ru'').]</ref> i Kurganan pedagogižen kolledžan filial oma professionaližen opendusen aluzkundoikš.
+
+Edeline lidnan pämez' om Sergei Voroncov (sügüz'ku 2014 — sulaku 2019).
 
 == Homaičendad ==
 <references/>
