--- a/Kurtamiš.mw
+++ b/Kurtamiš.mw
@@ -37,7 +37,7 @@ Edeline lidnan pämez' om Sergei Voroncov (sügüz'ku 2014 — sulaku 2019).
 <references/>
 
 == Irdkosketused ==
-* [http://www.kurtadm.ru/ Kurtamiš-lidnan tobmuden aluzkundoiden oficialine sait (''kurtadm.ru'').] {{ref-ru}}
+* [http://region-kurtamysh.com/ Kurtamišan municipaližen ümbrikon oficialine sait (''region-kurtamysh.com'').] {{ref-ru}}
 {{Commons|Category:Kurtamysh}}
 
 {{Kurganan agjan lidnad}}
