--- a/Kurgan.mw
+++ b/Kurgan.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 309,285
  | Voz' = 2021-01-01
  | Pind = 393
- | Fail = Kuybyshev street Kurgan.jpg
+ | Fail = Панорама города Кургана с самолета 2005 год 02.JPG
  | Pämez' = Jelena Sitnikova<br />(semendku 2021—,<br />''Елена Ситникова'')
  | Telefonkod = +7-3522-xxx-xxx
  | Avtokod = 45
@@ -29,14 +29,28 @@ Lidn sijadase [[Uralmäged|Uralmägiden]] taga, 75 m ü.m.t. keskmäižel korktu
 Kurgan om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 333 606 ristitud, 318 045 eläjid oli vl 2018. Kaikiš suremb ristitišt oli 367 200 eläjad vl 1999. Läz 360 tuhad elädas ezilidnoidenke (2017).
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 333 606 ristitud, 318 045 eläjid oli vl 2018. Kaikiš suremb ristitišt oli 367 200 eläjad vl 1999. Läz 360 tuhad ristituid elihe ezilidnoidenke vl 2017.
 
 Rahvahad (enamba 0,4% vl 2010): [[venälaižed]] — 91,4%, [[ukrainalaižed]] — 0,8%, [[totarlaižed]] — 0,5%, [[kazahlaižed]] — 0,4%, toižed rahvahad — 2,3%, rahvahuden ozutandata — 4,6%.
 
 Lidnan edeližed pämehed oma Sergei Rudenko (sügüz'ku 2014 — keväz'ku 2019) i Andrei Potapov (sulaku 2019 — semendku 2021).
 
 == Transport ==
-Avtobusad da taksid oma kundaližeks transportaks lidnas. Raudte ühtenzoitab [[Čeläbinsk]]anke, [[Jekaterinburg]]anke i [[Omsk]]anke, mugažo [[Petropavlovsk]]anke (Kazahstan). Voib sadas oiktal avtotel nenihe-žo lidnoihesai i [[Tümen'|Tümenihesai]]. Rahvahidenkeskeine civiline Kurgan-lendimport (''KRO'') radab lidnan päivnouzmaiženno röunanno, tehtas passažirreisid Moskvhasai i jügureisid.
+Avtobusad da taksid oma kundaližeks transportaks lidnas. Raudte ühtenzoitab [[Čeläbinsk]]anke, [[Jekaterinburg]]anke i [[Omsk]]anke, mugažo [[Petropavlovsk]]anke (Kazahstan). Voib sadas oiktal avtotel nenihe-žo lidnoihesai i [[Tümen'|Tümenihesai]]. Rahvahidenkeskeine civiline Kurgan-lendimport<ref>[http://airkurgan.ru/ Kurgan-lendimportan sait (''airkurgan.ru'').] {{ref-ru}}</ref> (''KRO'') radab lidnan päivnouzmaiženno röunanno, tehtas passažirreisid Moskvhasai i jügureisid.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Okn-083-1.jpg|Lidnan Duman i Administracijan pert' Leninan torgul (2012)
+20201017 Александро-Невская церковь 3.jpg|Ph. Aleksandr Nevalaižen kafedraline päjumalanpert', vn 2020 nägu
+Kurgan mechanical engineering plant.jpg|«Kurganmašzavod» vl 2012<br />(jaugvägiden toraavtod)
+Okn-117-1.jpg|Kurganan valdkundaline universitet (2014)
+РНЦ ВТО им. Елизарова - panoramio.jpg|Nacionaline medicinine travmatologijan i ortopedijan tedoiduzkeskuz G.A. Ilizarov-akademikan nimed (2011)
+Drama theatre Kurgan.jpg|Kurganan dramteatr (2011)
+Philarmony Kurgan.jpg|Kurganan agjan filarmonii (2011)
+СК Молодежный (Курган).jpg|Sportkompleks V.F. Gorbenkon nimed (2010)
+Аэропорт Курган.JPG|Kurgan-lendimportan sauvuz vl 2014
+Вокзал г. Курган.jpg|Kurgan-päraudtestancii i sen vedimdepo vl 2011
+</gallery>
 
 == Tetabad sündnuded ==
 * [[Fadejev Maksim|Maksim Fadejev]] (sünd. 1968) — Venäman muzikprodüser, muzikankirjutai i pajatai.
