--- a/Söm.mw
+++ b/Söm.mw
@@ -14,6 +14,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 <blockquote>
 * ''Andoi jumal sun, andab sömäd-ki.''
 * ''En olend sönu – emboinu, a söin da en ni sijaspäi.''
+* ''Heimod om äi, söda ei kus.''
 * ''Ken aigoiš libui, se i söi, a ken möhäs libui, se luzikan noli.''
 * ''Lehm tanhal — söm pertiš.''
 * ''Leib da vezi — saldatan söm.''
