/* Eloho sidotud vepsän muštatišed */ +

--- a/Elo.mw
+++ b/Elo.mw
@@ -19,6 +19,7 @@ Man irdpolel elo ei löudand, kosmine biologii tedoidab sen tundusid da gipoteti
 * ''Ala varaida kolnut, varaida eläbad.''
 * ''Elo meleta kuti puzu reigunke.''
 * ''Igän eläd, igän openud.''
+* ''Ken hätken eläb, se enamban nägeb.''
 </blockquote>
 
 == Kacu mugažo ==
