--- a/Mirandan_kel'.mw
+++ b/Mirandan_kel'.mw
@@ -1,11 +1,11 @@
-[[Fail:Linguistic map of asturian es.svg|thumb|220px|[[Ispanijan kel'|Ispanijankel'ne]] levigandusen kart. Mirandan kel' om rusttal mujul.]]
-'''Mirandan kel'''' (ičeze nimituz: ''Lhéngua mirandesa'') om üks' [[romanižed keled|ibero-romanižiš]], [[indoevropižed keled|indoevropižiš]] kelišpäi.
+[[Fail:Linguistic map of asturian es.svg|thumb|220px|[[Ispanijan kel'|Ispanijankel'ne]] levigandusen kart. Mirandan kel' om ozutadud rusttal mujul.]]
+'''Mirandan kel'''' (ičeze nimituz: ''Lhéngua mirandesa'', lühüdas ''mirandés'') om üks' [[romanižed keled|ibero-romanižiš]], [[indoevropižed keled|indoevropižiš]] kelišpäi.
 
 Se om [[Portugalii|Portugalijan]] ühteks kahtes valdkundkelespäi. Pagižijoiden lugu om läz 15,000 ristitud.
 
-Mirandan kirjkel' om [[latinan kirjamišt]]on pohjal.
+Mirandan kirjkel' om [[latinan kirjamišt]]on pohjal. Erigoittud kel' 12. voz'sadaspäi, šingotihe [[latinan kel'|latinan kelen]] sijaližes paginvariantaspäi. Asturleonan paginkontinuuman pala, no [[portugalijan kel']] valatoitab mirandan kel't kontinuuman toižiden keliden erineden, kudambiden valatoitai kel' om ispanijan kel'.
 
-Reguliruindorganzacii om Mirandan kelen institut (mir. ''Anstituto de la Lhéngua Mirandesa'') Portugalijan pohjoižpäivnouzman [[Miranda-du-Doru]]-municipalitetas, institut om sätud vn 2000 sügüz'kuspäi.
+Kel' om levitadud Portugalijan pohjoižpäivnouzmaižes čogas, opetas kel't sen školoiš vspäi 1986. Reguliruindorganzacii om Mirandan kelen institut (mir. ''Anstituto de la Lhéngua Mirandesa'') Portugalijan pohjoižpäivnouzman [[Miranda-du-Doru]]-municipalitetas, se institut om sätud vn 2000 sügüz'kul.
 
 == Homaičendad ==
 <references />
