--- a/Penton_Brajan.mw
+++ b/Penton_Brajan.mw
@@ -1,7 +1,9 @@
 {{Personalii}}
-'''Brajan Penton''' ({{lang-en|Brian Penton}}; sünd. [[21. eloku]] [[1904]], [[Brisben]], [[Kvinslend]], [[Avstralii (valdkund)|Avstralii]] — kol. [[24. eloku]] [[1951]], [[Sidnei]], [[Uz' Suviuel's]], Avstralii) oli tetab avstralijalaine kirjutai da lehtezmez'. [[Arčibal'dan premii|Arčibal'dan premijan]] laureat (1943).
+'''Brajan Penton''' ({{lang-en|Brian Penton}}; sünd. [[21. eloku]] [[1904]], [[Brisben]], [[Kvinslend]], [[Avstralii (valdkund)|Avstralii]] — kol. [[24. eloku]] [[1951]], [[Sidnei]], [[Uz' Suviuel's]], Avstralii) oli tetab avstraline kirjutai da lehtezmez'.
 
-Kirjuti kaks' [[istorine roman|istorišt romanad]] — «Man anastajad» (1934) da «Jäl'gestajad» (1936). [[Dostojevskii Födor|Födor Dostojevskijan]] radod tegiba valatoitusen Pentonan mail'mannägendha i literaturstilihe. Hänen sadusiš om [[realizm]]an elementad — se oli [[avstraline literatur|Avstralijan literaturan]] harakterine pird sil aigal.
+Penton radoi tetabiš jogapäiväližiš lugendlehtesiš 1920-nziš vozišpäi. Kommentirui sportan i politikan aigtegoid. Mez' kirjuti statjoidme paginoid Avstralijan kahten päministran täht.
+
+Kirjutai sädi kaks' [[istorine roman|istorišt romanad]] — «Man anastajad» (1934, ''Landtakers: The Story of an Epoch'') i sen «Jäl'gestajad»-sikvel (1936, ''Inheritors''). [[Dostojevskii Födor|Födor Dostojevskijan]] radod tegiba valatoitusen Pentonan mail'mannägendha i literaturstilihe. Hänen sadusiš om [[realizm]]an elementad — se oli [[avstraline literatur|Avstralijan literaturan]] harakterine pird sil aigal.
 
 == Homaičendad ==
 <references/>
@@ -12,3 +14,5 @@ Kirjuti kaks' [[istorine roman|istorišt romanad]] — «Man anastajad» (1934) 
 [[Kategorii:Kirjutajad kirjamišton mödhe]]
 [[Kategorii:Lehtezmehed kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
+[[Kategorii:Sündnuded Brisbenha]]
+[[Kategorii:Kolnuded Sidneiš]]
