--- a/Penton_Brajan.mw
+++ b/Penton_Brajan.mw
@@ -1,7 +1,7 @@
 {{Personalii}}
 '''Brajan Penton''' ({{lang-en|Brian Penton}}; sünd. [[21. eloku]] [[1904]], [[Brisben]], [[Kvinslend]], [[Avstralii (valdkund)|Avstralii]] — kol. [[24. eloku]] [[1951]], [[Sidnei]], [[Uz' Suviuel's]], Avstralii) oli tetab avstraline kirjutai da lehtezmez'.
 
-Penton radoi tetabiš jogapäiväližiš lugendlehtesiš 1920-nziš vozišpäi. Kommentirui sportan i politikan aigtegoid. Mez' kirjuti statjoidme paginoid Avstralijan kahten päministran täht.
+Penton radoi tetabiš jogapäiväližiš lugendlehtesiš 1920-nziš vozišpäi (''Brisbane Courier'', Sidnein ''The Daily Telegraph''). Kommentirui sportan i politikan aigtegoid. Mez' kirjuti statjoidme paginoid Avstralijan kahten päministran täht.
 
 Kirjutai sädi kaks' [[istorine roman|istorišt romanad]] — «Man anastajad» (1934, ''Landtakers: The Story of an Epoch'') i sen «Jäl'gestajad»-sikvel (1936, ''Inheritors''). [[Dostojevskii Födor|Födor Dostojevskijan]] radod tegiba valatoitusen Pentonan mail'mannägendha i literaturstilihe. Hänen sadusiš om [[realizm]]an elementad — se oli [[avstraline literatur|Avstralijan literaturan]] harakterine pird sil aigal.
 
