--- a/Isaakijan_päjumalanpert'.mw
+++ b/Isaakijan_päjumalanpert'.mw
@@ -1,4 +1,4 @@
-[[Fail:Saint Isaac's Cathedral in SPB.jpeg|thumb|right|300px|Isaakijan päjumalanpert']]
+[[Fail:Saint Isaac's Cathedral in SPB.jpeg|thumb|right|250px|Isaakijan päjumalanpert', vn 2012 nägu]]
 '''Isaakijan päjumalanpert'''' (oficialine nimituz — '''[[Isaakii Dalmacijaspäi|Pühän Isaakijan Dalmacijaspäi]] päjumalanpert'''') ({{lang-ru|Исаакиевский собор}}, ''Собор преподобного Исаакия Далматского'') om [[Piter]]in kaikiš suremb [[ortodoksine hristanuskond|hristanuskondan ortodoksine]] pühäpert'. Sijadase [[Isaakijan torg (Piter)|Isaakijan torgul]].
 
 Pühäpert' om saudud vll 1818−1858, oli alištunu restavracijale vozil 1947−1951 i 1954−1963. Isaakii Dalmacijalaine oli kaikiš arvostadud [[Petr I]]-imperatoral pühämehen. Ende koume pühäpertid Isaakijan oiktastuseks oli saudud i rušitüd Piteriš, koumanz' oli päjumalanpert' nügüdläižel sijal. Piterin eparhijan kafedraline päjumalanpert' vll 1858−1929 (nügüd' kafedraline om Kazanin päjumalanpert'). Vspäi 1929 se om muzeikompleksan. Tehtas jumalanradnikoičendoid päjumalanpertiš joga päiväl vspäi 1991.
