--- a/.au.mw
+++ b/.au.mw
@@ -1,5 +1,7 @@
 '''.au''' om [[Avstralii (valdkund)|Avstralijan]] [[DNS|Internet-domen]]. Se om avaitud [[1986. voz'|1986]]-nden voden 5. päiväl keväz'kud.<ref>[http://iana.org/domains/root/db/au.html IANA — .au Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
 
+Ende kävutihe .oz-domenad Avstralijan saitoiden täht (nüg. .oz.au). Kaik om äi saitoid .au-lopunke. Registracii om lasktud olijiden Avstralijas organizacijoiden i personoiden täht vaiše. Nügüd'aigan saitan registracii om kel'tud ezmäižen tazopindan .au-domenas, voib registriruidas kahtenden, koumanden i nelländen tazopindan domenoiš.
+
 == Homaičendad ==
 <references />
 
