--- a/.au.mw
+++ b/.au.mw
@@ -2,6 +2,16 @@
 
 Ende kävutihe .oz-domenad Avstralijan saitoiden täht (nüg. .oz.au). Kaik om äi saitoid .au-lopunke. Registracii om lasktud olijiden Avstralijas organizacijoiden i personoiden täht vaiše. Nügüd'aigan saitan registracii om kel'tud ezmäižen tazopindan .au-domenas, voib registriruidas kahtenden, koumanden i nelländen tazopindan domenoiš.
 
+Koumen tazopindan domenad Avstralijan regionoiden täht:
+* Kvinslend — '''.qld'''
+* Pohjoine territorii — '''.nt'''
+* Päivlaskmaine Avstralii — '''.wa'''
+* Suviavstralii — '''.sa'''
+* Tasmanii — '''.tas'''
+* Uz' Suviuel's — '''.nsw'''
+* Viktorii — '''.vic'''
+* Avstralijan pälidnan territorii — '''.act'''.
+
 == Homaičendad ==
 <references />
 
