--- a/Lacuna_Coil_(EP).mw
+++ b/Lacuna_Coil_(EP).mw
@@ -3,13 +3,15 @@
  | Kor' = 
  | Artist = [[Lacuna Coil]]
  | Žanrad = [[gotikmetal]]
- | Voz' = [[1997.]]
+ | Voz' = [[1998.]]
  | Leiblad = [[Century Media]]
  | Valdkund = [[Italii]]
  | Kel' = [[anglijan kel']]
  | Prodüser = [[Sorihta Val'demar|Val'demar Sorihta]]
 }}
-'''«Lacuna Coil»''' (kändase anglijan kelespäi kuti ''Pall'az spiral' '' vai ''Pall'az käm'') om italižen [[Lacuna Coil|ühtennimižen gruppan]] ezmäine minial'bom (EP). Se om pästtud vl [[1997]].
+'''«Lacuna Coil»''' (kändase anglijan kelespäi kuti ''Pall'az spiral' '' vai ''Pall'az käm'') om italižen [[Lacuna Coil|ühtennimižen gruppan]] ezmäine minial'bom (EP), üks' kahtespäi.
+
+Minial'bom om änetadud vn 1997 redukus-kül'mkus (Woodhouse Studios), om pästtud Century Media-leiblal vn [[1998]] 7. päiväl sulakud. Pajoiden ühthine hätkeližuz om 27 min 52 s.
 
 == Pajoiden nimikirjutez ==
 # ''No Need To Explain'' (3:40, Eile tarbhaižut sel'gitada)
