--- a/Salavat_Kupere.mw
+++ b/Salavat_Kupere.mw
@@ -1,22 +1,8 @@
-{{Eländpunkt
- | Nimi = Salavat Kupere<br />Салават Купере / Радуга <small>(ven.)</small><br />Салават Күпере <small>(tot.)</small>
- | Lidnanznam = 
- | Flag = 
- | Lidnanznam text = 
- | Flag text = 
- | Valdkund = Venäma
- | Eläjiden lugu = 
- | Voz' = 
- | Pind = 
- | Fail = 
- | Pämez' = 
- | Telefonkod = +7-843
- | Aigvö = [[UTC]]+3 (MSK+0)
-}}
-'''Salavat Kupere''' ([[venäkel'|ven.]]: ''Салават Купере'' / ''Радуга'', [[totaran kel'|tot.]]: ''Салават Күпере'') oli lidnan projekt, kudamb pidi olda [[Kazan'|Kazanin]] kaimdailidnan. Vl 2013 projekt om tühjitud.
+'''Salavat Kupere''' ({{lang-ru|Салават Купере}} / ''Радуга'', {{lang-tt|Салават Күпере}}) om [[Venäma]]n lidnan projekt [[Tatarstanan Tazovaldkund]]as, se pidi olda [[Kazan'|Kazanin]] kaimdailidnaks.
+
+Vl 2013 pučihe projektan realizacijaspäi.
 
 {{stub}}
-
-[[Kategorii:Venäman lidnad]]
-[[Kategorii:Eländpunktad kirjamišton mödhe]]
+[[Kategorii:Venäman lidnoiden projektad]]
+[[Kategorii:Lidnoiden projektad kirjamišton mödhe]]
 [[Kategorii:Tatarstanan Tazovaldkund]]
