--- a/Salavat_Kupere.mw
+++ b/Salavat_Kupere.mw
@@ -1,8 +1,8 @@
-'''Salavat Kupere''' ({{lang-ru|Салават Купере}} / ''Радуга'', {{lang-tt|Салават Күпере}}) om [[Venäma]]n lidnan projekt [[Tatarstanan Tazovaldkund]]as, se pidi olda [[Kazan'|Kazanin]] kaimdailidnaks.
+'''Salavat Kupere''' ({{lang-ru|Салават Купере}} / ''Радуга'', {{lang-tt|Салават Күпере}}) oli [[Venäma]]n lidnan projekt [[Tatarstanan Tazovaldkund]]as, se pidi olda [[Kazan'|Kazanin]] päivlaskmaižeks kaimdailidnaks. Udesnimitihe lidnad eländkompleksaks.
 
-Vl 2013 pučihe projektan realizacijaspäi.
+Vl 2012 projektan realizacii zavodihe. «Salavat Kupere»-eländkompleksan sauvoi om Tatarstanan Tazovaldkundan valdkundaline elämižfond. Äižiruižen eländkompleksan faterad mödas socialižen ipotekan programan mödhe. Kaik oli planiruidud 1 mln nellikmetrad eländsijid 36 tuhad fateroiš 400 ga territorijal. Planiruiše ühtenzoitta eländkompleksad Kazanin toižidenke paloidenke lidnelektrojonusel.
 
 {{stub}}
+[[Kategorii:Kazan']]
 [[Kategorii:Venäman lidnoiden projektad]]
 [[Kategorii:Lidnoiden projektad kirjamišton mödhe]]
-[[Kategorii:Tatarstanan Tazovaldkund]]
