--- a/Ščučje_(lidn,_Kurganan_agj).mw
+++ b/Ščučje_(lidn,_Kurganan_agj).mw
@@ -5,16 +5,16 @@
  | Lidnanznam text = Ščučjen lidnanznam
  | Flag text = Ščučjen flag
  | Valdkund = Venäma
- | Eläjiden lugu = 9,775
- | Voz' = 2017
+ | Eläjiden lugu = 9,346
+ | Voz' = 2021
  | Pind = 34.89
  | Fail =
- | Pämez' = Vladimir Tamahin<br />(heinku 2008—)
+ | Pämez' = Il'ja Panfilov<br />(sügüz'ku 2018—)
  | Telefonkod = +7-35244-xx-xxx
  | Avtokod = 45
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
 }}
-'''Ščučje''' ({{lang-ru|Щучье}}) om [[Venäma]]n lidn da lidnankund [[Kurganan agj]]an päivlaskmas. Se om [[Ščučjen rajon]]an administrativine keskuz.
+'''Ščučje''' ({{lang-ru|Щу́чье}}) om [[Venäma]]n lidn da lidnankund [[Kurganan agj]]an päivlaskmas. Se om [[Ščučjen rajon]]an administrativine keskuz.
 
 == Istorii ==
 Eländpunktan aluz om pandud pagenuziden manmehiden Keskuzvenämaspäi ''Ščučje-küläks'' vl 1750. Sai nimitust järven edeližen nimen mödhe ({{lang-ru|Большое Щучье}} vn 1805 kartal), se oli [[haug'|haugidenke]]. Saudihe [[Transsib]]an «Čeläbinsk — Omsk»-augotižpalan Čumläk-stancijad žilonno vl 1896, nimitihe stancijad penen jogen mödhe. Kätihe žilod lidnaks vn 1945 16. päiväl semendkud. Udesnimitihe raudtestancijad lidnan mödhe vl 1974.
@@ -22,12 +22,21 @@ Eländpunktan aluz om pandud pagenuziden manmehiden Keskuzvenämaspäi ''Ščuč
 Ščučje šingotase sömtegimištol (jauhon i leibän tehmine, sömän živatoiden täht pästand), omblendan i pilindmaterialiden edheotandoil, mugažo himižen azegišton likvidacijan tegimen uz' profiliruind mäneb i sodapalakundad sijadasoiš lidnanno.
 
 == Geografijan andmused ==
-Lidn sijadase [[Uralmäged|Uralantagaižes]], Nifanskoje-järven pohjoižrandal (5,33 km²), 165 m ü.m.t. keskmäižel korktusel. Matkad [[Čeläbinskan agj]]an röunhasai om 35 km päivlaskmha, [[Kurgan]]hasai om 165 km päivnouzmha orhal, 176 km avtol vai raudtel. Lähembaine lidn om [[Šumih (lidn)|Šumih]] 34 km päivnouzmha orhal, 39 km «Irtiš»-avtotrassadme (R-254) vai Transsib-raudtedme. Trass om saudud 2 kilometras lidnan pohjoižröunaspäi.
+Lidn sijadase [[Uralmäged|Uralantagaižes]], Nifanskoje-järven pohjoižrandal (5,33 km²), 165 m ü.m.t. keskmäižel korktusel. Matkad [[Čeläbinskan agj]]an röunhasai om 35 km päivlaskmha, [[Kurgan]]hasai om 165 km päivnouzmha orhal, 176 km avtol vai raudtel. Lähembaine lidn om [[Šumih (lidn)|Šumih]] 34 km päivnouzmha orhal, 39 km «Irtiš»-avtotrassadme (R-254) vai Transsib-raudtedme. Trass om saudud kahtes kilometras lidnan pohjoižröunaspäi.
 
 Ščučje om lidnankundan üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 10 973 ristitud, rajonan pol'. Kaikiš suremb lidnan ristitišt oli 11 094 eläjad vl 1989. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman Kazanin jumalaižen uz' pühäpert' om olmas lidnas. Lähembaine professionaližen opendusen aluzkund sijadase Šumihas.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 10 973 ristitud, rajonan pol'. Kaikiš suremb lidnan ristitišt oli 11 094 eläjad vl 1989.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman Kazanin jumalaižen uz' pühäpert'<ref>[http://sobory.ru/geo/locat/18769 Ščučjen pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om olmas lidnas.
+
+Lähembaine professionaližen opendusen aluzkund sijadase Šumihas.
+
+Edeline lidnan pämez' om Vladimir Tamahin (heinku 2008 — sügüz'ku 2018).
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://щучье-город.рф/ Lidnan tobmuden aluzkundoiden oficialine sait (''щучье-город.рф'').] {{ref-ru}}
