--- a/Šumih_(lidn).mw
+++ b/Šumih_(lidn).mw
@@ -5,16 +5,16 @@
  | Lidnanznam text = Šumihan lidnanznam
  | Flag text = Šumihan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 17,542
- | Voz' = 2017
+ | Eläjiden lugu = 17,141
+ | Voz' = 2021
  | Pind = 28.16
- | Fail = Г. Шумиха - panoramio (4).jpg
+ | Fail = Г. Шумиха - panoramio (1).jpg
  | Pämez' = Anatolii Kozlov<br />(kül'mku 2010—)
  | Telefonkod = +7-35245-xx-xxx
  | Avtokod = 45
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
 }}
-'''Šumih''' ({{lang-ru|Шумиха}}) om [[Venäma]]n lidn da lidnankund [[Kurganan agj]]an päivlaskmas. Se om [[Šumihan rajon]]an administrativine keskuz.
+'''Šumih''' ({{lang-ru|Шуми́ха}}) om [[Venäma]]n lidn da lidnankund [[Kurganan agj]]an päivlaskmas. Se om [[Šumihan rajon]]an administrativine keskuz.
 
 == Istorii ==
 Eländpunktan aluz om pandud [[Transsib]]an raudtestancijaks vl 1892. Kätihe žilod stancijanno lidnaks vl 1944.
@@ -30,6 +30,14 @@ Lidn sijadase [[Uralmäged|Uralantagaižes]], 170 m ü.m.t. keskmäižel korktus
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 17 819 ristitud, rajonan kaks' koumandest. Kaikiš suremb lidnan ristitišt oli 20..21 tuh. eläjid vll 1967−2001 (21 984 rist. vl 1989).
 
 Šumihan agrariž-sauvondkolledž<ref>[http://шаск.рф/ Šumihan agrariž-sauvondkolledžan sait (''шаск.рф'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Г. Шумиха - panoramio (3).jpg|Adivpert' i vezičuhunduz (2012)
+Г. Шумиха - panoramio.jpg|Laukad vl 2012
+Г. Шумиха - panoramio (2).jpg|Vändlavut lapsiden täht (2012)
+Г. Шумиха - panoramio (4).jpg|Šumih-päraudtestancijan sauvuz vl 2012
+</gallery>
 
 == Homaičendad ==
 <references/>
