--- a/Gorno-Altaisk.mw
+++ b/Gorno-Altaisk.mw
@@ -1,12 +1,12 @@
 {{Eländpunkt
- | Nimi = Gorno-Altaisk<br />Горно-Алтайск <small>(ven.)</small><br />Туулу Алтай <small>(suvialt.)</small>
- | Lidnanznam = Coat of Arms of Gornoaltaysk (Altai Republic).png
- | Flag = 
+ | Nimi = Gorno-Altaisk<br />Горно-Алтайск <small>(ven.)</small><br />Улалу <small>(suvialt.)</small>
+ | Lidnanznam = Coat of Arms of Gorno-Altaysk.svg
+ | Flag = Flag of Gorno-Altaysk.svg
  | Lidnanznam text = Gorno-Altaiskan lidnanznam
- | Flag text = 
+ | Flag text = Gorno-Altaiskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 64,464
- | Voz' = 2020-01-01
+ | Eläjiden lugu = 64,505
+ | Voz' = 2021-01-01
  | Pind = 95.5
  | Fail = Gorno-altajsk 05 view-on-city.jpg
  | Pämez' = Jurii Nečaev<br />(sügüz'ku 2017—)
@@ -14,10 +14,12 @@
  | Avtokod = 04
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
-'''Gorno-Altaisk''' ({{lang-ru|Горно-Алтайск}}, {{lang-alt|Туулу Алтай}}) om lidn da lidnümbrik [[Venäma]]n suves. Se om [[Altajan Tazovaldkund]]an pälidn da üks'jäine lidn.
+'''Gorno-Altaisk''' ({{lang-ru|Го́рно-Алта́йск}}, {{lang-alt|Улалу}}) om lidn da lidnümbrik [[Venäma]]n suves. Se om [[Altajan Tazovaldkund]]an pälidn da üks'jäine lidn.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1824 kuti ''Ulal-külä'' ({{lang-ru|село Улала}}) — [[ortodoksine hristanuskond|ortodoksižen hristanuskondan]] hengeline missii [[Altai (mäged)|Altai-mägil]]. Vl 1928 se sai lidnan statusad. Vll 1932−1948 lidnan nimi oli ''Oirot-Tur'' ({{lang-ru|Ойрот-Тура}}).
+Eländpunktan aluz om pandud vl 1824 kuti ''Ulal-žilo'' ({{lang-ru|село Улала}}) — [[ortodoksine hristanuskond|ortodoksižen hristanuskondan]] hengeline missii [[Altai (mäged)|Altai-mägil]]. Nimitihe Ulalušk-jogen mödhe ({{lang-ru|Улалушка}} 19 km pitte, {{lang-alt|Улула}}), se lankteb Maim-jogehe ({{lang-ru|Майма}} 60 km pitte) žilon territorijal, mitte om Katunin oiktaks ližajogeks.
+
+Vl 1928 žilo sai lidnan statusad. Vll 1932−1948 lidnan nimi oli ''Oirot-Tur'' ({{lang-ru|Ойрот-Тура}}), sid' nügüdläine.
 
 == Geografijan andmused ==
 Lidn sijadase tazovaldkundan pohjoižröunanno, [[Altajan mäged|Altajan mägiden]] katl'uses, 270..305 m korktusil valdmeren pindan päl, [[Katun']]-jogen oiktal randpolel ({{lang-alt|Кадын}}, [[Ob'|Obin]] joginišk). Matkad [[Moskv]]hasai om 3641 km päivlaskmha orhal, [[Bijsk]]hasai om 105 km avtotedme (lähembaine raudtestancii), [[Barnaul]]hasai om 258 km avtotedme.
@@ -41,6 +43,20 @@ Ižandusen sarakod oma turizm i sauvondmaterialoiden pästand ([[raudbeton]]tege
 Avtobusad da maršruttaksid oma kundaližeks transportaks lidnan südäimes i ümbrištos.
 
 Tatanmaine ühtennimine lendimport (''ГОР / RGK'') sijadase 6 km päivlaskmha lidnan keskusespäi, [[Katun']]-jogen oiktal randal. Sišpäi tehtas reisid [[Moskv]]hasai, kezaaigan — [[Krasnojarsk]]ha, [[Novosibirsk]]ha i [[Tümen'|Tümenihe]].<ref>[http://www.ga-airport.ru/passazhiram1/raspisanie-reysov Reisiden aigplan. — Gorno-Altaisk-lendimportan oficialine sait (''ga-airport.ru'').] {{ref-ru}}</ref>
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Gorno-Altaysk Center 0665.jpg|Lidnan keskuzpalan nägu vl 2021
+Gorno-Altaysk, Altai Republic, Russia - panoramio (18).jpg|Memorial pölištunuzile sodamehile (2015)
+Gorno-Altaysk ProtectionChurch 014 4695.jpg|Pühän Jumalanmaman Katken jumalanpert' (ortodoksine hristanuskond), vn 2021 nägu
+Gorno-Altaysk BuddhistTemple 014 3978.jpg|Buddizman pühäpert', vn 2021 nägu
+Gorno-Altaysk Bank 014 4469.jpg|Venäman Keskuzbankan Altajan Tazovaldkundan Rahvahaline bank vl 2021
+Агробиостанция горно-Алтайского государственного университета.Горно-Алтайск 02.jpg|Gorno-Altaiskan valdkundaližen universitetan agrobiostancii (2016)
+Gorno-altajsk 04 squar theatre.jpg|Altajan Tazovaldkundan Rahvahaline teatr (2006)
+Gorno-Altaysk Museum 013 1405.jpg|Altajan Tazovaldkundan Rahvahaline muzei (2021)
+Gorno-Altaysk Club 014 4622.jpg|Lidnan kul'turkeskuz (2021)
+Gorno-Altaysk Airport 014 5033.jpg|Gorno-Altaisk-lendimportan A-terminal vl 2021
+</gallery>
 
 == Tetabad sündnuded ==
 * [[Horoševskii Viktor|Viktor Horoševskii]] (1940−2012) — oli nevondkundaline i Venäman matematikantedomez'.
