--- a/Eht.mw
+++ b/Eht.mw
@@ -5,6 +5,7 @@ Necen aigan [[Päiväine]] sabustab [[gorizont]]ad da zavodiše [[tikahtuz]]; ne
 
 == Ehtha sidotud vepsän muštatišed ==
 <blockquote>
+* ''Ehtal itkend, homencel nagrand.''
 * ''Elin päivän ehthasai.''
 * ''Mäni päiv, tuli eht — surm i lähemba.''
 </blockquote>
