--- a/Jablokpu.mw
+++ b/Jablokpu.mw
@@ -22,6 +22,11 @@ Libub [[Pohjoine mapolišk|Pohjoižen mapoliškon]] [[ven vö|venon]] klimatan z
 
 Kuctas jablokpun ploduid [[jablok]]oikš, ned oma šurunvuiččed magedad vai muigedmagedad. Ottas pud [[pumaterial|materialaks]].
 
+== Jablokpuhu sidotud vepsän muštatiž ==
+<blockquote>
+* ''Kenen jablokpu, se i jablokoid söb.''
+</blockquote>
+
 == Homaičendad ==
 <references />
 
