--- a/Jablok.mw
+++ b/Jablok.mw
@@ -9,6 +9,11 @@ Jablokpuiden kodima om [[Keskuzazii]]. Om äi [[raud]]ad ploduiš. Kazvatadas ä
 [[Fail:Appleoutput.png|thumb|right|250px|Jablokoiden satuz gektaraspäi vl 2000]]
 Kaikiš järedambad jablokoiden kazvatajad oma [[Kitai]] (se-žo niiden järed möi), [[Evropan Ühtištuz|EÜ:n]] mad, [[Amerikan Ühtenzoittud Valdkundad|AÜV]].
 
+== Jablokha sidotud vepsän muštatiž ==
+<blockquote>
+* ''Kenen jablokpu, se i jablokoid söb.''
+</blockquote>
+
 == Kacu mugažo ==
 * [[Apple]] — korporacii päfateranke [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiš]], tegeb personaližid da planšetkompjuteroid, audioplejerid, telefonid da kompjuterprogramid.
 * [[Jablok (partii)|Jablok]] — [[Venäma]]n politine partii.
