--- a/Mez'.mw
+++ b/Mez'.mw
@@ -11,9 +11,10 @@ Mehen alaigäčud oma [[prihaine]] i [[priha]]. Suguküpsnemine zavodiše 12..13
 
 Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromosomad oma hänen kariotipas, znamoitas niid X i Y. Sen erineden naižen organizm om kahtenke X-hromosomanke.
 
-== Meheze sidodud vepsän muštatiž ==
+== Meheze sidodud vepsän muštatišed ==
 <blockquote>
 * ''Ak tespäi tagaiži pördlese, a mužik, hot' huba, ei pördelte.''
+* ''Mez' söb, mez' sab, mehele andab Jumal.''
 </blockquote>
 
 == Homaičendad ==
