/* Sömhä sidotud vepsän muštatišed */ +

--- a/Söm.mw
+++ b/Söm.mw
@@ -18,6 +18,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 * ''Ken aigoiš libui, se i söi, a ken möhäs libui, se luzikan noli.''
 * ''Lehm tanhal — söm pertiš.''
 * ''Leib da vezi — saldatan söm.''
+* ''Mez' söb, mez' sab, mehele andab Jumal.''
 * ''Midä ei sögoi, sidä i laudale ei togoi.''
 * ''Söid kut siga, läksid kut koza.''
 * ''Söm mehen kandišeb.''
