--- a/Ristit.mw
+++ b/Ristit.mw
@@ -26,6 +26,7 @@ Ristitun erigoičijad päpirdad oma püštoiged kävund, šingotadud päaivod, m
 * ''Järed da äred, pen' da mahtav.''
 * ''Kana eile lind, ak eile ristit.''
 * ''Pen' da tark, sur' da šläbäk.''
+* ''Ristit koleb, a živat kadob.''
 </blockquote>
 
 == Homaičendad ==
