--- a/Živatad.mw
+++ b/Živatad.mw
@@ -27,6 +27,11 @@ Ezmäižed živatad sünduiba 500 mln («[[kembrii|kembrine]] poukahtuz») ... 1
 * Živatoiden toižendoiden igän hätkeližuz om erazvuitte lujas. Erased gavedid elädas päivest, ''Savalia savaglia''-[[korallad|koralloiden]] kolonii eläb 2700 vodhesai.
 * [[Gormonad]] sädasoiš eriližiš organoiš (kazmusil — jogahižes stajas).
 
+== Živatha sidotud vepsän muštatiž ==
+<blockquote>
+* ''Ristit koleb, a živat kadob.''
+</blockquote>
+
 == Kacu mugažo ==
 * [[Kodiživatad]]
 * [[Zverin lugu|Zverin (Živatan) lugu]]
