--- a/Oug.mw
+++ b/Oug.mw
@@ -1,7 +1,12 @@
-[[Fail:Upperarm.jpg|thumb|right|250px|Hura oug.]]
+[[Fail:Upperarm.jpg|thumb|right|250px|Hura oug]]
 '''Oug''' (äilugus mugažo '''hardjod''') om [[käzi|käden]] pala, sijadase [[ougniveleh]]en da [[künambruz]]nivelehen keskes. 
 
-Tobjimalaz, konz pagištas ougan polhe, lugedas ei käden üläpalad, no [[ristitun hibj|hibjan]] palad [[pä]]n da käden keskes. Anatomižešti sidä kuctas ougniveleheks.
+Tobjimalaz, konz pagištas ougan polhe, ka lugedas ei käden üläpalad, no [[ristitun hibj|hibjan]] palad [[pä]]n da käden keskes. Anatomižešti kuctas sidä ougniveleheks.
+
+== Ougha sidotud vepsän muštatiž ==
+<blockquote>
+* ''Kanz kadjoiš, a elo hardjoiš.''
+</blockquote>
 
 {{stub}}
 [[Kategorii:Ristitun hibj]]
