*Empty MediaWiki Message*

--- a/Twice_(muzikgrupp).mw
+++ b/Twice_(muzikgrupp).mw
@@ -1,7 +1,7 @@
 {{Muzikgrupp
  | Nimi = Twice<br />트와이스 ''teuwaiseu''
  | Logo = TWICE LOGO.png
- | Foto = Twice Members in 2015 - 3x3.jpg
+ | Foto = 
  | Žanrad = [[keipop]], [[džeipop]]
  | Voded = 2015–
  | Valdkund = Suvikorei
